# format

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
benchmark/: CMakeLists.txt  format-benchmark.cpp
src/univang/format/: CMakeLists.txt  buffer.hpp  chrono.hpp  format.hpp  format_context.hpp  parse_context.hpp
src/univang/format/detail/: chrono.cpp  format.cpp  format_double.cpp  format_double.hpp  format_double_bignum.cpp  format_double_fixed.cpp  format_double_grisu.cpp  format_integer.hpp  format_parsing.hpp  format_utils.hpp
test/: CMakeLists.txt  test-main.cpp
